LeetCode： [X] 每日一题：1797. 设计一个验证系统